# dockerfile-build-secrets

./: Dockerfile  LICENSE  Makefile  README.md  dockerfile-build-secrets.cabal
app/: Main.hs
src/: DockerfileBuildSecrets.hs
test/: Test.hs  end-to-end.sh
test/testdata/: Dockerfile.basic  Dockerfile.basic.out  Dockerfile.id-precedence  Dockerfile.id-precedence.out  Dockerfile.id-sources  Dockerfile.id-sources.out  Dockerfile.required-and-optional  Dockerfile.required-and-optional.out
