name:                dockerfile-build-secrets
version:             0.1.0.0
license:             AllRightsReserved
author:              Simon Alling
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   DockerfileBuildSecrets
  ghc-options:       -Wall
  default-language:  Haskell2010
  build-depends:
      -- `base` version range copied from language-docker's Cabal file:
      base >=4.8 && <5
    , text >=1.0 && <2
    , containers >= 0.6 && <0.7
    , language-docker >=11.0.0 && <12
    , json >=0.10 && <0.11

executable dockerfile-build-secrets
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -Wall
  default-language:  Haskell2010
  build-depends:
      base
    , language-docker
    , dockerfile-build-secrets

test-suite dockerfile-build-secrets-test
  hs-source-dirs:    test
  type:              exitcode-stdio-1.0
  main-is:           Test.hs
  ghc-options:       -Wall
  default-language:  Haskell2010
  build-depends:
      base
    , hspec >=2 && <3
    , hspec-core >=2.10.0 && <2.11
    , text
    , directory
    , language-docker
    , dockerfile-build-secrets
